# taskbroker

./: .craft.yaml  .craft.yml  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  VERSION  build.rs  cloudbuild.yaml  config.yaml  docker-compose-sentry.yml  docker-compose.yml  flatten_use_imports.py  pyproject.toml  runtime_config_defaults.yaml  setup.cfg  test_drop_task_due_to_killswitch.yaml  test_forward_demoted_namespaces.yaml  test_forward_task_due_to_demoted_namespace.yaml
.cargo/: config.toml
.github/workflows/: build-client.yml  ci.yml  fast-revert.yml  image.yml  python-example-image.yml  release-client.yml  release-ghcr-version-tag.yml  release.yml
benches/: inflight_activation_store_bench.rs  store_bench.rs
clients/: .craft.yml  CHANGELOG.md
clients/kafka-queue/: .gitignore  README.md
clients/kafka-queue/python/: Dockerfile  README.md  pyproject.toml
clients/kafka-queue/python/src/kafka_queue_proto/: __init__.py  queue_bridge_pb2.py  queue_bridge_pb2.pyi  queue_bridge_pb2_grpc.py
clients/kafka-queue/python/src/kafka_queue_worker/: __init__.py  child.py  imports.py  logging_config.py  queue_bridge_client.py  requeue.py  types.py  worker.py
clients/kafka-queue/python/src/kqueue_examples/: __init__.py  kqueue_app.py  kqueue_cli.py
clients/python/: Dockerfile.example  README.md  pyproject.toml
clients/python/scripts/: occupancy_prometheus_demo.py
clients/python/src/: registry.py  retry.py  router.py  task.py
clients/python/src/examples/: README.md  app.py  cli.py  example_app.py  store.py  tasks.py
clients/python/src/scheduler/: scheduler.py
clients/python/src/taskbroker_client/: TODO  app.py  canary.py  cli.py  constants.py  metrics.py  registry.py  retry.py  router.py  sdk.py  structured_logging.py  task.py  types.py
clients/python/src/taskbroker_client/scheduler/: __init__.py  runner.py  scheduler.py  schedules.py  storage.py
clients/python/src/taskbroker_client/worker/: __init__.py  client.py  events.py  producer.py  push_clients.py  worker.py  workerchild.py
clients/python/src/worker/: workerchild.py
clients/python/test/: test_app.py  test_registry.py  test_retry.py
clients/python/test/worker/: test_worker.py
clients/python/tests/: conftest.py  test_app.py  test_external_task.py  test_metrics.py  test_registry.py  test_retry.py  test_structured_logging.py  test_task.py
clients/python/tests/client/: test_client.py
clients/python/tests/scheduler/: test_runner.py  test_schedules.py  test_storage.py
clients/python/tests/worker/: test_client.py  test_producer.py  test_worker.py
config/: config-dev.yaml  config-sentry-dev.yaml
default_migrations/: 0001_create_database.sql
devenv/: sync.py
devservices/: config.yml
docs/: architecture.md  common-misconceptions.md  kafka-config-migration.md
documentation/: standards.md
gocd/templates/: taskbroker.jsonnet
integration_tests/: pyproject.toml
integration_tests/integration_tests/: helpers.py  push_worker.py  runner.py  test_consumer_rebalancing.py  test_failed_tasks.py  test_multi_topic.py  test_push_postgres.py  test_task_worker_processing.py  test_upkeep_delay.py  test_upkeep_expiry.py  test_upkeep_retry.py  worker.py
k8s/: README.md  k8s_stateful_set.yaml  k8s_storage_class.yaml  k8s_taskworker.yaml
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 0001_create_inflight_taskactivations.sql  0002_add_at_most_once.sql  0002_add_delay.sql  0003_update_activations_table.sql  0004_separate_activation_and_metadata.sql  0005_add_bucket.sql  0006_add_sent.sql
migrations/blob/: 0001_add_activation_blob_table.sql
migrations/postgres/: 0002_add_bucket.sql  0003_add_claim_expires_at.sql  0004_add_topic_age_contention.sql
migrations/sqlite/: 0004_add_application.sql  0006_add_claim_expires_at.sql
pg_migrations/: 0001_create_inflight_activations.sql  0003_add_sent.sql
python/: Dockerfile  pyproject.toml  requirements-dev.txt
python/integration_tests/: helpers.py  runner.py  test_consumer_rebalancing.py  test_failed_tasks.py  test_task_worker_processing.py  test_upkeep_delay.py  test_upkeep_dlq.py  test_upkeep_expiry.py  test_upkeep_retry.py  worker.py
scripts/: bump-version-clients.sh  bump-version.sh  git-precommit-hook
src/: auth_middleware.rs  backoff.rs  canary_tasks.rs  config.rs  dispatch.rs  fetch.rs  flusher.rs  grpc_middleware.rs  grpc_server.rs  helpers.rs  inflight_activation_store.rs  inflight_task_store.rs  killswitch.rs  lib.rs  logging.rs  main.rs  main.rs.bak  metrics.rs  pool.rs  pprof_server.rs  push.rs  push_task.rs  run.rs  runtime_config.rs  serde.rs  store.rs  task_pusher.rs  test_utils.rs  tokio.rs  upkeep.rs  worker.rs  worker_client.rs  worker_router.rs
src/config/: README.md  batch.rs  deprecated.rs  deserialize.rs  fetch.rs  kafka.rs  mod.rs  push.rs  queue.rs  raw.rs  serialize.rs  shared.rs  store.rs  upkeep.rs  validate.rs
src/consumer/: admin.rs  deserialize_activation.rs  inflight_activation_batcher.rs  inflight_activation_writer.rs  kafka.rs  mod.rs  os_stream_writer.rs  upkeep.rs
src/fetch/: mod.rs  tests.rs
src/grpc/: auth_middleware.rs  metrics_middleware.rs  mod.rs  server.rs  server_tests.rs  status_flusher.rs  taskworker_client.rs
src/grpc_server/: tests.rs
src/inflight_activation_store/: store_tests.rs  tests.rs
src/kafka/: activation_batcher.rs  activation_store_writer.rs  activation_writer.rs  admin.rs  consumer.rs  deserialize.rs  deserialize_activation.rs  deserialize_passthrough.rs  deserialize_raw.rs  drop_activation.rs  inflight_activation_batcher.rs  inflight_activation_writer.rs  kafka_writer.rs  mod.rs  os_stream_writer.rs  utils.rs
src/push/: mod.rs  tests.rs  thread.rs  updater.rs
src/store/: activation.rs  fake_activation_store.rs  inflight_activation.rs  inflight_activation_tests.rs  inflight_redis_activation.rs  inner_redis_activation_store.rs  map_activation_store.rs  metadata_store.rs  mod.rs  postgres_activation_store.rs  query.rs  records.rs  redis_utils.rs  (+5 more)
tests/: grpc_server_test.rs
(+26 files in other folders)
