[package]
name = "taskbroker"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry_protos = "0.1.69"
anyhow = "1.0.92"
chrono = { version = "0.4.26" }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
tonic = "0.12"
tonic-health = "0.12.3"
prost = "0.13"
prost-types = "0.13.3"
tokio = { version = "1.43.1", features = ["full"] }
tokio-util = "0.7.12"
tokio-stream = { version = "0.1.16", features = ["full"] }
futures = "0.3.31"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
serde = "1.0.214"
serde_yaml = "0.9.34"
figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
clap = { version = "4.5.20", features = ["derive"] }
sentry = { version = "0.36.0", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "env-filter",
    "json",
] }
metrics-exporter-statsd = "0.9.0"
metrics = "0.24.0"
elegant-departure = { version = "0.3.1", features = ["tokio"] }
uuid = { version = "1.11.0", features = ["v4"] }
tower = "0.5.1"
http = "1.1.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
bytes = "1.10.0"
futures-util = "0.3.31"
http-body-util = "0.1.2"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "store_bench"
harness = false

[features]
bench-with-mnt-disk = []
ssl = ["rdkafka/ssl"]
