[package]
name = "taskbroker"
version = "0.1.0"
# keep edition in sync with .pre-commit-config.yaml
# https://github.com/rust-lang/rustfmt/issues/4485
edition = "2024"

[profile.release]
debug = 1
split-debuginfo = "off" # Ensures symbols stay in the binary
force-frame-pointers = true # Requires Rust 1.75+

[dependencies]
anyhow = "1.0.92"
axum = "0.8.1"
bytes = "1.10.0"
chrono = { version = "0.4.26" }
clap = { version = "4.5.20", features = ["derive"] }
dashmap = "6.1.0"
elegant-departure = { version = "0.3.1", features = ["tokio"] }
figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.1.0"
http-body-util = "0.1.2"
libsqlite3-sys = "0.30.1"
metrics = "0.24.0"
metrics-exporter-statsd = "0.9.0"
pprof = { version = "0.14", features = ["flamegraph", "frame-pointer"] }
prost = "0.13"
prost-types = "0.13.3"
rand = "0.9.2"
rdkafka = { version = "0.37.0", features = ["cmake-build", "ssl"] }
sentry = { version = "0.41.0", default-features = false, features = [
    # default features, except `release-health` is disabled
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "transport",
    # additional features
    "tracing",
    "logs"
] }
sentry_protos = { git = "https://github.com/getsentry/sentry-protos", branch = "george/push-taskbroker/internal-load-balancer" }
itertools = "0.14.0"
serde = "1.0.214"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.43.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = "0.7.12"
tonic = "0.13"
tonic-health = "0.13"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "env-filter",
    "json",
] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "store_bench"
harness = false

[features]
bench-with-mnt-disk = []
